--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,8 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
-        ]
+        ],
+        "lint": "./vendor/bin/pint -v"
     },
     "extra": {
         "laravel": {
